config.json - enabled hashRouter & default servers

--- a/config.json
+++ b/config.json
@@ -1,23 +1,22 @@
 {
   "defaultHomeserver": 0,
   "homeserverList": [
-    "pasta.kaste.wtf"
+    "kaste.wtf"
   ],
   "allowCustomHomeservers": true,
 
   "featuredCommunities": {
     "openAsDefault": false,
     "spaces": [
-      "#tiktok:pasta.kaste.wtf"
     ],
     "rooms": [
       "#cinny:matrix.org"
     ],
-    "servers": ["pasta.kaste.wtf"]
+    "servers": ["kaste.wtf"]
   },
 
   "hashRouter": {
-    "enabled": false,
+    "enabled": true,
     "basename": "/"
   }
 }
